--- a/portfolio.html
+++ b/portfolio.html
@@ -16,36 +16,39 @@
   </head>
     <!--Heared of page with navigation-->
     <header class="header">
-        <nav class="navigation">
-            <a class="logo link" href="./index.html" aria-label="Логотип веб-студии">
-                <span lang="en"><span class="logo-web">Web</span>Studio</span>
-            </a>
-            <ul class="navigation-list list">
-                <li class="navigation-list-element">
-                    <a class="navigation-list-link link" href="./index.html">Студия</a>
-                </li>
-                <li class="navigation-list-element">
-                    <a class="navigation-list-link link active-page-link" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="navigation-list-element">
-                    <a class="navigation-list-link link" href="">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="address-list list">
-                <li class="address-list-element">
-                    <a class="address-list-link link" href="mailto:info@devstudio.com">
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li class="address-list-element">
-                    <a class="address-list-link link" href="tel:+380961111111">
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
-        </address>
+        <div class="overal-container">
+            <nav class="navigation">
+                <a class="logo link" href="./index.html" aria-label="Логотип веб-студии">
+                    <span lang="en"><span class="logo-web">Web</span>Studio</span>
+                </a>
+    
+                <ul class="navigation-list list">
+                    <li class="navigation-list-element">
+                        <a class="navigation-list-link link" href="./index.html">Студия</a>
+                    </li>
+                    <li class="navigation-list-element">
+                        <a class="navigation-list-link link active-page-link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="navigation-list-element">
+                        <a class="navigation-list-link link" href="">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="address-list list">
+                    <li class="address-list-element">
+                        <a class="address-list-link link" href="mailto:info@devstudio.com">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="address-list-element">
+                        <a class="address-list-link link" href="tel:+380961111111">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <!--Main content of page-->
     <main>
