--- a/portfolio.html
+++ b/portfolio.html
@@ -124,26 +124,32 @@
     </main>
     <!--Footer of page-->
     <footer class="footer">
-        <a class="logo link" href="./index.html" aria-label="Логотип веб-студии">
-            <span lang="en"><span class="logo-web">Web</span>Studio</span>
-        </a>
-        <address class="footer-address">
-            <ul class="footer-address-list list">
-                <li class="footer-address-element">
-                    <a class="footer-address-link footer-address-geo link" href="https://goo.gl/maps/MEUAZSnsSESrG9sy9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a class="footer-address-link footer-address-nogeo link" href="mailto:info@example.com">
-                    info@example.com
-                    </a>
-                </li>
-                <li>
-                    <a class="footer-address-link footer-address-nogeo link" href="tel:+380991111111">
-                    +38 099 111 11 11
-                    </a>
-                </li>
-            </ul>
-        </address>
+        <div class="overal-container">
+            <div class="footer-container">
+                <a class="logo link" href="./index.html" aria-label="Логотип веб-студии">
+                    <span lang="en" class="logo-light"><span class="logo-web">Web</span>Studio</span>
+                </a>
+                <address class="footer-address">
+                    <ul class="footer-address-list list">
+                        <li class="footer-address-element">
+                            <a class="footer-address-link footer-address-geo link"
+                                href="https://goo.gl/maps/MEUAZSnsSESrG9sy9" target="_blank">г. Киев, пр-т Леси Украинки,
+                                26</a>
+                        </li>
+                        <li class="footer-address-element">
+                            <a class="footer-address-link footer-address-nogeo link" href="mailto:info@example.com">
+                                info@example.com
+                            </a>
+                        </li>
+                        <li class="footer-address-element">
+                            <a class="footer-address-link footer-address-nogeo link" href="tel:+380991111111">
+                                +38 099 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </div>
     </footer>
   </body>
 </html>
