Completed portolio page
Fully completed portfolio page;
Corrected header's border on index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--Heared of page with navigation-->
     <!--<div class="overal-container">-->
-    <header class="header">
+    <header class="header header-subfeature">
       <div class="overal-container">
         <nav class="navigation">
           <a
