--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     />
   </head>
     <!--Heared of page with navigation-->
-    <header class="header">
+    <header class="header header-subfeature">
         <div class="overal-container">
             <nav class="navigation">
                 <a class="logo link" href="./index.html" aria-label="Логотип веб-студии">
@@ -54,6 +54,8 @@
     <main>
      <!--List of buttons-->
      <section class="projects-section">
+         <div class="overal-container">
+             <div class="projects-container">
      <h1 hidden>Портфолио</h1>
      <ul class="project-buttons-list list">
          <li class="project-button-element">
@@ -74,52 +76,54 @@
      </ul>
 
      <ul class="projects-list list">
-        <li class="projects-list-element">
+        <li class="projects-list-element tt">
              <img class="projects-list-img" src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
-            <h2 class="projects-list-header">Технокряк</h2>
-            <p class="projects-list-description">Веб-сайт</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Технокряк</h2>
+            <p class="projects-list-description">Веб-сайт</p></div>
         </li>
          <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-            <h2 class="projects-list-header">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="projects-list-description">Дизайн</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="projects-list-description">Дизайн</p></div>
         </li>
          <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
-            <h2 class="projects-list-header">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="projects-list-description">Приложение</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="projects-list-description">Приложение</p></div>
         </li>
          <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project4.jpg" alt="Проект Prime" width="370" height="294">
-            <h2 class="projects-list-header">Проект <span lang="en">Prime</span></h2>
-            <p class="projects-list-description">Маркетинг</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Проект <span lang="en">Prime</span></h2>
+            <p class="projects-list-description">Маркетинг</p></div>
         </li>
         <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project5.jpg" alt="Проект Boxes" width="370" height="294">
-            <h2 class="projects-list-header">Проект <span lang="en">Boxes</span></h2>
-            <p class="projects-list-description">Приложение</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Проект <span lang="en">Boxes</span></h2>
+            <p class="projects-list-description">Приложение</p></div>
         </li>
         <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-            <h2 class="projects-list-header" lang="en">Inspiration has no Borders</h2>
-            <p class="projects-list-description">Веб-сайт</p>
+            <div class="project-card-text"><h2 class="projects-list-header" lang="en">Inspiration has no Borders</h2>
+            <p class="projects-list-description">Веб-сайт</p></div>
         </li>
          <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project7.jpg" alt="Издание Limited Edition" width="370" height="294">
-            <h2 class="projects-list-header">Издание <span lang="en">Limited Edition</span></h2>
-            <p class="projects-list-description">Дизайн</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="projects-list-description">Дизайн</p></div>
         </li>
         <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project8.jpg" alt="Проект LAB" width="370" height="294">
-            <h2 class="projects-list-header">Проект <span lang="en">LAB</span></h2>
-            <p class="projects-list-description">Маркетинг</p>
+            <div class="project-card-text"><h2 class="projects-list-header">Проект <span lang="en">LAB</span></h2>
+            <p class="projects-list-description">Маркетинг</p></div>
         </li>
         <li class="projects-list-element">
             <img class="projects-list-img" src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
-            <h2 class="projects-list-header" lang="en">Growing Business</h2>
-            <p class="projects-list-description">Приложение</p>
+            <div class="project-card-text"><h2 class="projects-list-header" lang="en">Growing Business</h2>
+            <p class="projects-list-description">Приложение</p></div>
         </li>
      </ul>
+     </div>
+    </div>
     </section>
     </main>
     <!--Footer of page-->
