Made corrections after checking
Removed extra divs, classes;
Made paddings in the sections;
Corrected padding's values;
Removed not proper margin

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
      <!--List of buttons-->
      <section class="projects-section">
          <div class="overal-container">
-             <div class="projects-container">
+            <!-- <div class="projects-container">-->
      <h1 hidden>Портфолио</h1>
      <ul class="project-buttons-list list">
          <li class="project-button-element">
@@ -122,7 +122,7 @@
             <p class="projects-list-description">Приложение</p></div>
         </li>
      </ul>
-     </div>
+     <!--</div>-->
     </div>
     </section>
     </main>
