--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!--<div class="overal-container">-->
     <header class="header header-subfeature">
       <div class="overal-container">
+        <!--<div class="header-container"> -->
         <nav class="navigation">
           <a
             class="logo link"
@@ -65,6 +66,7 @@
             </li>
           </ul>
         </address>
+        <!-- </div>-->
       </div>
     </header>
     <!--Main content of page-->
@@ -119,102 +121,100 @@
       <!--List of services section-->
       <section class="services-section">
         <div class="overal-container">
-          <div class="services-container">
-            <h2 class="services-header">Чем мы занимаемся</h2>
-            <ul class="services-list list">
-              <li class="services-list-element">
-                <img
-                  class="services-list-img"
-                  src="./images/box1.jpg"
-                  alt="пишем код"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li class="services-list-element">
-                <img
-                  class="services-list-img"
-                  src="./images/box2.jpg"
-                  alt="адаптиуем под различные устройства"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li class="services-list-element">
-                <img
-                  class="services-list-img"
-                  src="./images/box3.jpg"
-                  alt="кастомизируем продукт под ваши нужды"
-                  width="370"
-                  height="294"
-                />
-              </li>
-            </ul>
-          </div>
+          <!-- <div class="services-container">-->
+          <h2 class="services-header">Чем мы занимаемся</h2>
+          <ul class="services-list list">
+            <li class="services-list-element">
+              <img
+                class="services-list-img"
+                src="./images/box1.jpg"
+                alt="пишем код"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="services-list-element">
+              <img
+                class="services-list-img"
+                src="./images/box2.jpg"
+                alt="адаптиуем под различные устройства"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="services-list-element">
+              <img
+                class="services-list-img"
+                src="./images/box3.jpg"
+                alt="кастомизируем продукт под ваши нужды"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+          <!-- </div> -->
         </div>
       </section>
       <!--Our team-->
       <section class="team-section">
         <div class="overal-container">
-          <div class="team-container">
-            <h2 class="team-header">Наша команда</h2>
-            <ul class="team-list list">
-              <li class="team-list-element">
-                <img
-                  class="team-list-img"
-                  src="./images/igor.jpg"
-                  alt="Игорь Демьяненко"
-                  width="270"
-                  height="260"
-                />
-                <div class="team-card-info">
-                  <h3 class="team-list-header">Игорь Демьяненко</h3>
-                  <p lang="en" class="team-list-profession">Product Designer</p>
-                </div>
-              </li>
-              <li class="team-list-element">
-                <img
-                  class="team-list-img"
-                  src="./images/olga.jpg"
-                  alt="Ольга Репина"
-                  width="270"
-                  height="260"
-                />
-                <div class="team-card-info">
-                  <h3 class="team-list-header">Ольга Репина</h3>
-                  <p lang="en" class="team-list-profession">
-                    Frontend Developer
-                  </p>
-                </div>
-              </li>
-              <li class="team-list-element">
-                <img
-                  class="team-list-img"
-                  src="./images/nickolay.jpg"
-                  alt="Николай Тарасов"
-                  width="270"
-                  height="260"
-                />
-                <div class="team-card-info">
-                  <h3 class="team-list-header">Николай Тарасов</h3>
-                  <p lang="en" class="team-list-profession">Marketing</p>
-                </div>
-              </li>
-              <li class="team-list-element">
-                <img
-                  class="team-list-img"
-                  src="./images/michail.jpg"
-                  alt="Михаил Ермаков"
-                  width="270"
-                  height="260"
-                />
-                <div class="team-card-info">
-                  <h3 class="team-list-header">Михаил Ермаков</h3>
-                  <p lang="en" class="team-list-profession">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <!-- <div class="team-container">-->
+          <h2 class="team-header">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-list-element">
+              <img
+                class="team-list-img"
+                src="./images/igor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-info">
+                <h3 class="team-list-header">Игорь Демьяненко</h3>
+                <p lang="en" class="team-list-profession">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-element">
+              <img
+                class="team-list-img"
+                src="./images/olga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-info">
+                <h3 class="team-list-header">Ольга Репина</h3>
+                <p lang="en" class="team-list-profession">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-element">
+              <img
+                class="team-list-img"
+                src="./images/nickolay.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-info">
+                <h3 class="team-list-header">Николай Тарасов</h3>
+                <p lang="en" class="team-list-profession">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-element">
+              <img
+                class="team-list-img"
+                src="./images/michail.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-info">
+                <h3 class="team-list-header">Михаил Ермаков</h3>
+                <p lang="en" class="team-list-profession">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+          <!-- </div>-->
         </div>
       </section>
     </main>
